# shellm

./: .gitignore  Dockerfile  README.md  dataset.jsonl  dataset_viewer.html  eval_tasks.jsonl  pyproject.toml
rl/: Dockerfile  all_experiments.py  benchmark.py  docker.sh  load_scenarios.py  project_types.py  run_agent.py  sandbox.py  shellm-grpo.py  train.py
scripts/: convert_to_oai.py  create_eval_split.py  generate_tasks.py
sft/: Dockerfile  shellm.py
shellm/: __init__.py  generate_tasks.py  host_sandbox.py  judge.py  main.py  sandbox.py  task_curator.py  tasks.jsonl  teacher.py
shellm/tests/: test_sandbox.py
